--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,9 @@
 <section class="section">
       <div class="left-div">
-          <div class="build-features">
-             <h1>Welcome to<br>the new AdSphere<sup>TM</sup></h1>
-             <a href="https://adsphere.drmetrix.com/blog/2020/02/04/new-february-2020-build/" target="_blank" class="learn-more">Learn More</a>
-             <hr>
-            <p>Q4 rate "<strong>actuals</strong>" are now <strong>LIVE</strong>!</p>
-            <p>For more info, please <a href="https://www.drmetrix.com/spendmethodology.html">Click here.</a></p>
-           </div>
+        <img src="./assets/images/adsphere-login-page-01-min.png"/>
+        <a href="https://www.drmetrix.com/adsphere-awards.html" target="_blank" class="layoutleftsecondlink_holiday"></a>
+        <a href="https://drmetrix.com/blog/2020/03/19/tracking-the-daily-impact-of-coronavirus-on-television-advertising/" target="_blank" class="blog-link">Tracking the Daily Impact of Coronavirus on Television Advertising</a>
+        <a href="https://drmetrix.com/blog/2020/03/19/tracking-the-daily-impact-of-coronavirus-on-television-advertising/" target="_blank" class="link-for-details">Click here for Details <i class="fa fa-hand-o-up" aria-hidden="true"></i></a>
       </div>
       <div class="right-div">
           <div class="inner-right">
