--- a/templates/modals/advancedModal3.html
+++ b/templates/modals/advancedModal3.html
@@ -11,7 +11,7 @@
             Please contact DRMetrix to upgrade your subscription plan.
         </p>
         <div class="align-center grid-block upgrade">
-            <input type="button" zf-close="" class="button" value="Contact Now"
+            <input type="button" class="button" value="Contact Now"
                 ng-click="sendMail()">
         </div>
         <div class="align-center grid-block">
