--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -743,10 +743,6 @@ input[type="checkbox"].checkbox-custom {
 
 /*header*/
 
-header {
-  border-bottom: solid 1px #cbcccc;
-}
-
 header.sticky-top {
   z-index: 1;
 }
@@ -768,6 +764,7 @@ header.sticky-top {
   align-items: center;
   align-content: center;
   flex: 1 0 auto;
+  cursor: pointer;
 }
 
 .nav-menu>li>a {
@@ -786,6 +783,7 @@ header.sticky-top {
   display: block;
   margin: 0 auto;
   padding: 0;
+  width: 32px;
 }
 
 .nav-menu>li>a label {
@@ -856,13 +854,16 @@ header.sticky-top {
   filter: brightness(0) invert(1);
 }
 
-.nav-menu .global-search {
-  width: 400px;
-  padding: 0px 10px;
-}
-
 .nav-menu .global-search form {
   width: 100%;
+}
+
+.nav-menu .global-search form > div {
+  width: 350px;
+  padding: 0px;
+  margin: 0 auto;
+  position: relative;
+  display: block;
 }
 
 .notification-new {
@@ -963,14 +964,14 @@ header.sticky-top {
   display: flex;
   justify-content: space-between;
   background: #202733;
-  border-top: 1px solid #5c5c5f;
-  padding: 2px 12px;
+  border-top: 2px solid #5c5c5f;
+  padding: 2px 10px;
   width: 100%;
 }
 
 .black-top-menu .left-menu li {
   color: #fff;
-  margin-right: 12px;
+  margin-right: 5px;
   background: #202b39;
 }
 
@@ -988,9 +989,11 @@ header.sticky-top {
 }
 
 .black-top-menu .left-menu li:first-child {
-  margin-right: 48px;
+  margin-right: 15px;
   background: transparent;
   padding-left: 0;
+  border: none;
+  font-size: 13px;
 }
 
 .black-top-menu .left-menu li:nth-child(4) {
@@ -1013,7 +1016,6 @@ header.sticky-top {
 
 .black-top-menu .left-menu li.active-alert {
   background: #fff;
-  padding: 2px 8px 2px 6px;
 }
 
 .black-top-menu .left-menu li.active-alert label {
@@ -1052,6 +1054,11 @@ header.sticky-top {
 
 .black-top-menu .checkbox-filter li .dropdown-menu a {
   color: #202b39;
+  background: #fbfbfb;
+}
+
+.black-top-menu .checkbox-filter li .dropdown-menu a:hover {
+  background: #d4d4d4;
 }
 
 .filter-listing {
@@ -1427,7 +1434,7 @@ header.sticky-top {
 .left-menu li {
   border: 0;
   background: #fff;
-  padding: 4px 8px 4px 6px;
+  padding: 2px 8px 2px 6px;
   margin-right: 10px;
   border-radius: 20px;
   display: inline-flex;
@@ -2688,7 +2695,7 @@ header.sticky-top {
   margin-top: 0;
   border: 0;
   padding: 0;
-  width: 220px;
+  width: 120px;
 }
 
 .dropdown-menu a {
@@ -3738,6 +3745,11 @@ header.sticky-top {
   background: #e5e5e5;
 }
 
+.logout {
+  width: 80px;
+  max-width: 80px;
+}
+
 /*mobile responsive*/
 
 @media (max-height: 800px) {
@@ -3755,6 +3767,9 @@ header.sticky-top {
   }
   .blog-link {
     font-size: 12px;
+  }
+  .nav-menu>li:first-child {
+    max-width: 130px;
   }
 }
 
@@ -3774,12 +3789,6 @@ header.sticky-top {
 }
 
 @media (max-width: 1200px) {
-  .nav-menu {
-    justify-content: space-between;
-  }
-  .nav-menu .global-search {
-    width: 100%;
-  }
   .nav-menu .right-menu {
     width: 100px;
     border: none;
@@ -3795,6 +3804,13 @@ header.sticky-top {
   .global-search .search-filter input {
     font-size: 12px;
     line-height: 12px;
+  }
+  .nav-menu .global-search form > div {
+    width: 100%;
+  }
+  .log-out {
+    line-height: 0;
+    padding: 4px 0;
   }
   .black-top-menu .left-menu li:first-child {
     margin-right: 10px;
