--- a/templates/modals/errorMsgModal.html
+++ b/templates/modals/errorMsgModal.html
@@ -5,5 +5,5 @@
     </button>
 </div>
 <div class="modal-body">
-    <p class="text-center m-0"><em><span id="error_msg_span"></span></em></p>
+    <p class="text-center m-0"><em><span id="error_msg_span">Company already exists.</span></em></p>
 </div>
