--- a/templates/adminConsole.html
+++ b/templates/adminConsole.html
@@ -18,27 +18,30 @@
 
     <div class="black-top-menu">
         <nav class="user-menu-icons d-flex justify-content-between align-items-center">
-            <span class="welcome-text">Welcome ,{{admin.complete_name}}</span>
+            <span class="welcome-text">Welcome, {{admin.complete_name}}</span>
             <ul class="d-flex justify-content-between align-items-center">
                 <li class="mr-3">
                     <button class="btn btn-blue" ng-click="openAddCompany()"><img class="help"
                             src="./assets/images/add-user.svg">Add New Company</button>
-                </li>
-                <li class="mr-3">
-                    <button class="btn btn-blue" ng-click="toggle_search()"><img class="help"
-                            src="./assets/images/search-white.svg">Search</button>
                 </li>
                 <li class="mr-2 export-link-list">
                     <button class="btn btn-blue" ng-click="retailReportBox();">
                         <img class="help" src="assets/images/download.svg">Retail Report
                     </button>
                 </li>
-                <li>
-                    <button class="btn btn-blue" ng-click="export()"><img class="help"
-                            src="./assets/images/download.svg">Excel</button>
-                </li>
             </ul>
         </nav>
+    </div>
+    <div class="top-grid-filter">
+        <div class="network">
+            <div class="search-input">
+                <span class="search-icon">
+                    <i data-feather="search"></i>
+                </span>
+                <input type="search" placeholder="Search Brands" ng-model="ranking.searchText" ng-keyup="filterGridWithSearchText()">
+                <i class="fa fa-times-circle"></i>
+            </div>
+        </div>
     </div>
     <div id="gridAdmin" ui-grid="gridOptionsAdmin" ui-grid-exporter ui-grid-pagination ui-grid-resize-columns
         ui-grid-move-columns class="grid"></div>
