--- a/templates/modals/accountNotExistsZoho.html
+++ b/templates/modals/accountNotExistsZoho.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <h5 class="modal-title">Account Not Found</h5>
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="closeModal();">
         <span aria-hidden="true"></span>
     </button>
 </div>
