--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -234,9 +234,8 @@ select::-ms-expand {
   height: 25px;
   color: #fff;
   border: 1px solid #5cccf5;
-  padding: 5px 6px;
+  padding: 2px 8px;
   font-size: 13px;
-  line-height: 13px;
   border-radius: 4px;
   margin-bottom: 0;
   font-weight: 400;
@@ -253,12 +252,6 @@ select::-ms-expand {
 
 .btn i {
   margin-right: 2px;
-}
-
-.btn-sm {
-  font-size: 14px;
-  padding: 4px 8px;
-  line-height: 18px;
 }
 
 .btn-blue {
@@ -352,11 +345,11 @@ select::-ms-expand {
 /* Checkbox normal*/
 
 input[type="checkbox"].checkbox-custom, input[type="radio"].radio-custom-checkbox, .network-content input[type="radio"].radio-custom {
-  /* opacity: 0;
+  opacity: 0;
   position: absolute;
   left: 0;
   top: 2px;
-  margin: 0; */
+  margin: 0;
 }
 
 .checkbox-normal .checkbox-custom+.checkbox-custom-label:before {
@@ -385,7 +378,7 @@ input[type="checkbox"].checkbox-custom, input[type="radio"].radio-custom-checkbo
   float: left;
 }
 
-.checkbox-normal .checkbox-custom:checked+.checkbox-custom-label:before, .checkbox-radio .radio-custom-checkbox:checked+.radio-custom-checkbox-label:before {
+.checkbox-normal .checkbox-custom:checked+.checkbox-custom-label:before, .checkbox-radio .radio-custom-checkbox:checked+.radio-custom-checkbox-label:before  {
   border: 1px solid #9ea6b0;
   content: '\f00c';
   font-family: 'FontAwesome';
@@ -395,10 +388,10 @@ input[type="checkbox"].checkbox-custom, input[type="radio"].radio-custom-checkbo
 }
 
 input[type="checkbox"].checkbox-custom {
-  /* opacity: 0;
+  opacity: 0;
   position: absolute;
   width: 18px;
-  height: 18px; */
+  height: 18px;
 }
 
 .radio-custom-checkbox+.radio-custom-checkbox-label:before {
@@ -451,31 +444,6 @@ input[type="checkbox"].checkbox-custom {
 
 /*radio custom checkbox*/
 
-.checkbox-radio .radio-custom-checkbox+.radio-custom-checkbox-label:before {
-  font-size: 0.9em;
-  content: "";
-  background-color: #fff;
-  border: 1px solid #9ea6b0;
-  display: inline-block;
-  vertical-align: middle;
-  width: 1.6em;
-  height: 1.6em;
-  padding: 0;
-  border-radius: 5px;
-  margin-right: 0.5em;
-  text-align: center;
-}
-
-.checkbox-radio .radio-custom-checkbox:checked+.radio-custom-checkbox-label:before {
-  border: 1px solid #9ea6b0;
-  content: "\f00c";
-  font-family: "FontAwesome";
-  color: #202b39;
-  background-color: #fff;
-  border-radius: 4px;
-  line-height: 19px;
-}
-
 .checkbox-radio .radio-custom-checkbox:checked+.radio-custom-checkbox-label #datepickeropen {
   color: #00beff;
 }
@@ -494,6 +462,49 @@ input[type="checkbox"].checkbox-custom {
 .checkbox-radio .radio-custom-checkbox-label {
   margin-bottom: 0;
   display: flex;
+}
+
+/*checkbox*/
+
+.checkbox input[type="checkbox"] {
+  padding: 0;
+  height: initial;
+  width: initial;
+  margin-bottom: 0;
+  display: none;
+  cursor: pointer;
+}
+
+.checkbox label {
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 0;
+  display: flex;
+  align-items: center;
+}
+
+.checkbox label:before {
+  content: "";
+  position: relative;
+  background-color: #fff;
+  border: 1px solid #9ea6b0;
+  width: 18px;
+  height: 18px;
+  padding: 0;
+  border-radius: 4px;
+  margin-right: 7px;
+  display: inline-block;
+  min-width: 18px;
+}
+
+.checkbox input[type="checkbox"]:checked+label:after {
+  content: "\f00c";
+  position: absolute;
+  left: 3px;
+  font-family: "FontAwesome";
+  font-size: 12px;
+  color: #202b39;
+  line-height: 18px;
 }
 
 /*radio*/
@@ -1046,7 +1057,7 @@ header.sticky-top {
 .black-top-menu .checkbox-filter li:nth-child(2) {
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
-  padding: 4px 12px;
+  padding: 0 12px;
   margin-left: 12px;
   margin-right: 12px;
   display: flex;
@@ -1287,7 +1298,7 @@ header.sticky-top {
   width: 100%;
   background: #707883;
   box-shadow: 1px 0px 4px 0px #707883;
-  padding: 12px 15px;
+  padding: 5px 10px 6px;
 }
 
 .main-filter .collapse-menu {
@@ -1323,8 +1334,12 @@ header.sticky-top {
 
 .main-filter>ul>li {
   border-right: 1px solid rgba(32, 43, 57, 0.57);
-  padding-right: 16px;
-  margin-right: 16px;
+  padding-right: 6px;
+  margin-right: 6px;
+}
+
+.main-filter>ul>li>div {
+  font-size: 11px;
 }
 
 .main-filter>ul>li .btn-back {
@@ -1356,7 +1371,7 @@ header.sticky-top {
 }
 
 .main-filter>ul>li span {
-  font-size: 12px;
+  font-size: 11px;
   display: inline-block;
 }
 
@@ -1388,7 +1403,16 @@ header.sticky-top {
 .main-filter .response-type>ul li {
   border-right: none;
   position: relative;
-  margin-right: 28px;
+  display: flex;
+  align-items: center;
+}
+
+.main-filter .response-type>ul li label {
+  margin-bottom: 0;
+  font-size: 12px;
+  color: #fff;
+  display: flex;
+  align-items: center;
 }
 
 .main-filter .response-type>ul li:after {
@@ -1499,6 +1523,94 @@ header.sticky-top {
   align-items: center;
   color: #fff;
   position: relative;
+}
+
+/* filter radio */
+.radio-circular input[type="radio"] {
+  display: none;
+}
+.radio-circular input[type="radio"]+label {
+  background: #fff;
+  padding: 1px 8px 1px 3px;
+  margin-right: 4px;
+  margin-bottom: 0;;
+  border-radius: 20px;
+  display: inline-flex;
+  align-items: center;
+  border: 2px solid #202b39;
+  cursor: pointer;
+  font-size: 12px;
+  color: #333;
+}
+
+.radio-circular input[type="radio"] {
+  width: 18px;
+  height: 18px;
+  vertical-align: text-top;
+  margin-right: 5px;
+  position: absolute;
+}
+
+.radio-circular .custom-div {
+  font-size: 12px;
+  line-height: 18px;
+}
+
+.radio-circular input[type="radio"]:checked+label {
+  background: #202b39;
+  color: #fff;
+  vertical-align: bottom;
+}
+
+.radio-circular .radio-custom+.radio-custom-label:before {
+  content: "";
+  background-color: #fff;
+  border: solid 2px #202b39;
+  color: #202b39;
+  display: inline-block;
+  vertical-align: middle;
+  width: 14px;
+  height: 14px;
+  padding: 0;
+  border-radius: 100%;
+  margin-right: 0.5em;
+  text-align: center;
+  font-size: 7px;
+}
+
+.radio-circular .radio-custom:checked+.radio-custom-label:before {
+  background-color: #202b39;
+  border-color: #fff;
+  margin-right: 4px;
+  font-size: 6px;
+  content: "\f111";
+  font-family: "FontAwesome";
+  color: #fff;
+  line-height: 10px;
+  padding-left: 0;
+}
+
+/* Datepicker */
+.datepicker-li {
+  padding-left: 6px;
+  border-left: 2px solid #999;
+}
+.brand-filter ul.v-align-middle li.datepicker-li input[type="checkbox"] + label {
+  margin-left: 0; 
+  margin-right: 1em;
+  position: relative;
+  cursor: pointer;
+}
+.datepicker-li .checkbox-custom-label span {
+  font-size: 12px;
+}
+.datepicker-li .checkbox-custom + .checkbox-custom-label:before {
+  margin-right: 8px;
+}
+#datepickeropen {
+  margin-left: 5px;
+  font-size: 16px;
+  color: #d0d0d1;
 }
 
 /*sidebar*/
@@ -3478,9 +3590,9 @@ header.sticky-top {
 }
 
 .or_content {
-  font-size: 12px;
+  font-size: 11px;
   color: #fff;
-  display: block;
+  margin: 0 4px;
 }
 
 .network {
@@ -3750,6 +3862,11 @@ header.sticky-top {
   max-width: 80px;
 }
 
+.filter-menu li ul {
+  display: flex;
+  align-items: center;
+}
+
 /*mobile responsive*/
 
 @media (max-height: 800px) {
@@ -3770,6 +3887,9 @@ header.sticky-top {
   }
   .nav-menu>li:first-child {
     max-width: 130px;
+  }
+  .main-filter>ul>li.btn-wrapper {
+    margin-top: 4px;
   }
 }
 
@@ -3832,6 +3952,20 @@ header.sticky-top {
   }
   .section .build-features {
     left: 20px;
+  }
+  .main-filter .edit-filter>li {
+    width: 32.50%;
+    margin-bottom: 8px;
+    padding-right: 0;
+    margin-right: 8px;
+    border-bottom: 1px solid rgb(204, 206, 209);
+    border-right: none;
+    padding-bottom: 8px;
+    height: 49px;
+  }
+  .main-filter .edit-filter>li.btn-wrapper {
+    align-items: flex-end;
+    padding-bottom: 8px;
   }
 }
 
@@ -3906,6 +4040,9 @@ header.sticky-top {
   }
   .airings-filter .export-details li {
     padding: 0;
+  }
+  .main-filter .edit-filter>li {
+    width: 48%;
   }
 }
 
