--- a/templates/primary_filter.html
+++ b/templates/primary_filter.html
@@ -83,8 +83,7 @@
             </li>
         </ul>
     </li>
-    <!-- <li ng-show="page == 'network' "> -->
-       <li>
+    <li ng-show="page == 'network' ">
         <div>
             Break Type -
             <span class="text-disabled" id="breakType_filter" >{{selectBreakType == 'A' ? 'All' : selectBreakType == 'N' ? 'National' : 'DPI'}}</span>
